--- a/public/explore/explore.jade
+++ b/public/explore/explore.jade
@@ -129,13 +129,19 @@
                           ng-show="travelDateModel.queryType === 'range'",
                           ng-disabled="!travelDateModel.query.endMonth && !travelDateModel.query.endDay",
                           ng-model-options="{debounce:1000}")
-                        span.date-query-type.label.explore search by: 
-                        span.date-query-type(
-                          ng-click="resetTravelDateModel('exact')",
-                          ng-class="{selected: travelDateModel.queryType === 'exact'}") exact year
-                        span.date-query-type(
-                          ng-click="resetTravelDateModel('range')",
-                          ng-class="{selected: travelDateModel.queryType === 'range'}") range of years
+                        .margin-top
+                          span.date-query-type.date-query-type-label.explore search by: 
+                          span.date-query-type.explore(
+                            ng-click="resetTravelDateModel('exact', travelDateModel.estimated)",
+                            ng-class="{selected: travelDateModel.queryType === 'exact'}") exact year
+                          span.date-query-type.explore(
+                            ng-click="resetTravelDateModel('range', travelDateModel.estimated)",
+                            ng-class="{selected: travelDateModel.queryType === 'range'}") range of years
+                        .margin-top.include-estimates
+                          .checkbox
+                            label
+                              input(type="checkbox", ng-model="travelDateModel.estimated")
+                              div.include-estimates-label-explore include estimated dates
         
     .col-lg-12 
     
