--- a/public/explore/explore.jade
+++ b/public/explore/explore.jade
@@ -9,7 +9,7 @@
           label Dimensions
           ul.list-unstyled
             li.border-top(ng-repeat="dimension in dimensions")
-              span.small.text-light.pull-right.explore-count {{ counts[dimension.field] }}
+              span.small.text-light.pull-right.explore-count(title="{{ counts[dimension.field] }} entries have a value for this dimension.") {{ counts[dimension.field] }}
               .checkbox
                 label
                   input(type="checkbox", ng-model="dimension.active")
