--- a/public/error.jade
+++ b/public/error.jade
@@ -27,7 +27,7 @@ html(lang="en", ng-app="app")
               a(ui-sref="admin") Manage
             li
               a 
-                {{currentUser.fullName || currentUser.username}}
+                div {{currentUser.fullName || currentUser.username}}
             a.btn.btn-danger.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
               //i.fa.fa-sign-out.margin-right
               | Logout
