--- a/public/main/main.jade
+++ b/public/main/main.jade
@@ -24,7 +24,8 @@
         a(ui-sref="about") Learn more...
 
 
-      p.text-serif The tool is still under construction; private beta version currently being tested with the support of John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Tamara Griggs, Christopher Johns, Jane Kamensky, Simon Macdonald, Rebecca Messbarger, Barbara Naddeo, Carole Paul, Molly Taylor-Poleskey, Sophus Reinert, Rosemary Sweet.
+      p.text-serif The tool is still under construction; private beta version currently being tested with the support of Malcolm Baker, John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Christopher Johns, Simon Macdonald, Carole Paul, Sophus Reinert, Catherine Sama, Rosemary Sweet.
+
 
 
       p.text-serif For information about the project, please contact Giovanna Ceserani at 
