Updated server Entries controller code and Search template to enable displaying alternate names with the full name of the pointed-to entry in italics afterwards in the suggestions drop-down.

--- a/public/app.css
+++ b/public/app.css
@@ -136,6 +136,11 @@ a:focus,
   text-decoration: none;
 }
 
+.alternate-name-see {
+  margin-left: .35em;
+  font-style: italic;
+}
+
 .query {
   font-size: 12px;
   color: #888;
