--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -17,7 +17,8 @@
             ng-class="{ filled : query.fullName }"
             typeahead="item.nameMatch as item for item in getSuggestions('fullName', $viewValue)"
             typeahead-template-url="components/fullname-search-suggestion"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Born
@@ -32,7 +33,8 @@
             placeholder="place ({{ counts.birthPlace }} entries)",
             ng-class="{ filled : query.birthPlace }"
             typeahead="item for item in getSuggestions('places.birthPlace', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Died
@@ -47,7 +49,8 @@
             placeholder="place ({{ counts.birthPlace }} entries)",
             ng-class="{ filled : query.deathPlace }"
             typeahead="item for item in getSuggestions('places.deathPlace', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Employments and Identifiers
@@ -57,7 +60,8 @@
             placeholder="pursuit ({{ counts.pursuits }} entries)",
             ng-class="{ filled : query.pursuits }"
             typeahead="item for item in getSuggestions('pursuits.pursuit', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Occupations & Posts
@@ -67,21 +71,24 @@
             placeholder="occupation ({{ counts.occupations }} entries)",
             ng-class="{ filled : query.occupations }"
             typeahead="item for item in getSuggestions('occupations.title', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.occupations_group",
             placeholder="group ({{ counts.occupations_group }} entries)",
             ng-class="{ filled : query.occupations_group }"
             typeahead="item for item in getSuggestions('occupations.group', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.occupations_place",
             placeholder="place ({{ counts.occupations_place }} entries)",
             ng-class="{ filled : query.occupations_place }"
             typeahead="item for item in getSuggestions('occupations.place', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Military careers
@@ -91,7 +98,8 @@
             placeholder="rank ({{ counts.military }} entries)",
             ng-class="{ filled : query.military }"
             typeahead="item for item in getSuggestions('military.rank', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
 
         .form-group
@@ -102,14 +110,16 @@
             placeholder="society ({{ counts.societies }} entries)",
             ng-class="{ filled : query.societies }"
             typeahead="item for item in getSuggestions('societies.title', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.societies_role",
             placeholder="role ({{ counts.societies_role }} entries)",
             ng-class="{ filled : query.societies_role }"
             typeahead="item for item in getSuggestions('societies.role', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
 
         .form-group
@@ -120,14 +130,16 @@
             placeholder="institution ({{ counts.exhibitions }} entries)",
             ng-class="{ filled : query.exhibitions }"
             typeahead="item for item in getSuggestions('exhibitions.title', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.exhibitions_activity",
             placeholder="activity ({{ counts.exhibitions_activity }} entries)",
             ng-class="{ filled : query.exhibitions_activity }"
             typeahead="item for item in getSuggestions('exhibitions.activity', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
 
         .form-group
           label Education
@@ -137,28 +149,32 @@
             placeholder="institution ({{ counts.education_institution }} entries)",
             ng-class="{ filled : query.education_institution }"
             typeahead="item for item in getSuggestions('education.institution', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_place",
             placeholder="place ({{ counts.education_place }} entries)",
             ng-class="{ filled : query.education_place }"
             typeahead="item for item in getSuggestions('education.place', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_teacher",
             placeholder="teacher ({{ counts.education_teacher }} entries)",
             ng-class="{ filled : query.education_teacher }"
             typeahead="item for item in getSuggestions('education.teacher', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="query.education_degree",
             placeholder="degree ({{ counts.education_degree }} entries)",
             ng-class="{ filled : query.education_degree }"
             typeahead="item for item in getSuggestions('education.fullDegree', $viewValue)"
-            typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
         
         hr
         
@@ -170,7 +186,8 @@
             placeholder="place ({{ counts.travel_place }} entries)",
             ng-class="{ filled : travelModel.place }"
             typeahead="item for item in getSuggestions('travels.place', $viewValue)"
-            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
+            typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
+            typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
             type="text", 
             ng-model="travelModel.date.query.startYear",
