Modified display of alternate name in Explore.

--- a/public/app.css
+++ b/public/app.css
@@ -141,6 +141,11 @@ a:focus,
   font-style: italic;
 }
 
+.explore-alternate-name .alternate-name-see {
+  margin-left: 0;
+  display: block;
+}
+
 .query {
   font-size: 12px;
   color: #888;
