Fixed map showing up when there are no travels.

--- a/public/entry/entry.jade
+++ b/public/entry/entry.jade
@@ -190,7 +190,7 @@
         p.text-serif.small {{entry.notes}}
         
 
-      div.col-lg-3(ng-show="entry.travels")
+      div.col-lg-3(ng-show="entry.travels && entry.travels.length")
         button.btn.btn-default.btn-xs.btn-block(type="button", ng-click="reanimate(entry.travels)") Reanimate
         br
         #minimap
