--- a/public/entry/entry.jade
+++ b/public/entry/entry.jade
@@ -5,7 +5,7 @@
 
   .div(ng-show="entry")
     
-    h1 {{entry.fullName}}
+    h1(ng-bind-html="highlighted('fullName')")
       a.pull-right(ng-href="#/entries/{{nextIndex}}")
         i.fa.fa-angle-right.margin-left
       a.pull-right(ng-href="#/entries/{{previousIndex}}")
